<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffffff">

    <TextView
        android:layout_marginTop="@dimen/frag_top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rQuestion1"
        android:gravity="center"
        android:id="@+id/question1_textview" />
<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/question1_textview"
    android:id="@+id/radiogroup1"
    android:nestedScrollingEnabled="false">


    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes_string"
        android:id="@+id/ques1_yes_radio" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_string"
        android:id="@+id/ques2_no_radio"
        android:layout_weight="0.04"
        android:layout_alignBottom="@+id/ques1_yes_radio"
        android:layout_alignLeft="@+id/ques1_yes_radio" />
</RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frag_space_questions"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rQuestion2"
        android:id="@+id/question2_textview"
        android:textSize="18dp"
        android:layout_below="@+id/radiogroup1"
        android:layout_centerHorizontal="true"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question2_textview"
        android:id="@+id/radiogroup2">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boy_string"
        android:id="@+id/boy_radio"
        android:layout_marginRight="@dimen/radiobutton_margin"
        />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/girl_string"
        android:id="@+id/girl_radio"

        android:layout_marginRight="@dimen/radiobutton_margin"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_string"
        android:id="@+id/other_radio" />
    </RadioGroup>


    <!--<EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="@dimen/frag_space_questions"
        android:ems="10"
        android:hint="@string/rQuestion4"
        android:id="@+id/ques4_editText"
        android:layout_below="@+id/radiogroup3"
        android:layout_alignLeft="@+id/question3_textview"
        android:layout_alignStart="@+id/question3_textview"
        android:layout_alignRight="@+id/question3_textview"
        android:layout_alignEnd="@+id/question3_textview" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_marginTop="@dimen/frag_space_questions"
        android:hint="@string/rQuestion5"
        android:id="@+id/ques5_editText"
        android:layout_below="@+id/ques4_editText"
        android:layout_alignLeft="@+id/ques4_editText"
        android:layout_alignStart="@+id/ques4_editText"
        android:layout_alignRight="@+id/question3_textview"
        android:layout_alignEnd="@+id/question3_textview" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frag_space_questions"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rQuestion6"
        android:id="@+id/textView2"
        android:layout_below="@+id/ques5_editText"
        android:layout_alignLeft="@+id/ques5_editText"
        android:layout_alignStart="@+id/ques5_editText"
        android:layout_alignRight="@+id/ques5_editText"
        android:layout_alignEnd="@+id/ques5_editText"
        android:textSize="16dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:id="@+id/checkBox"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/ques1_yes_radio"
        android:layout_alignEnd="@+id/ques1_yes_radio" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:id="@+id/checkBox2"
        android:layout_alignTop="@+id/checkBox"
        android:layout_toRightOf="@+id/ques3_no_radio"
        android:layout_toEndOf="@+id/ques3_no_radio" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:id="@+id/checkBox3"
        android:layout_below="@+id/checkBox"
        android:layout_alignRight="@+id/checkBox"
        android:layout_alignEnd="@+id/checkBox" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:id="@+id/checkBox4"
        android:layout_below="@+id/checkBox2"
        android:layout_alignRight="@+id/checkBox2"
        android:layout_alignEnd="@+id/checkBox2" />-->


</RelativeLayout>
